--- a/css/styles.css
+++ b/css/styles.css
@@ -43,8 +43,10 @@ li{
 	display: inline-block;
 	float: left;
 	min-height;
-	width: 50%;
+	width: 40%;
 	text-align: center;
+	margin: .5em;
+	min-height: 350px;
 }
 
 .pattern-container, .resource-container {
@@ -76,6 +78,20 @@ li{
 
 .nav-item:hover{
 	color: #FF638C;
+}
+
+.video-frame {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.video-frame iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 @media (max-width: 300px) {
