--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,12 @@
 	font-family: basic;
 	src: url(fonts/basictitlefont.ttf);
 }
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 
 h1 {
 	margin: .5em;
@@ -28,7 +34,7 @@ ul.nav{
 	text-align: center;
 }
 
-li:first-child{
+li:first-of-type {
 	border-left: none;
 }
 
@@ -45,6 +51,7 @@ li{
 
 .text{
 	font-family: 'Crimson Text', serif;
+	margin: 0 5%;
 }
 
 .nav-item{
@@ -87,9 +94,9 @@ li{
 	display: inline-block;
 	float: left;
 	min-height;
-	width: 45%;
+	width: 50%;
 	text-align: center;
-	margin: .5em;
+	padding: .5em;
 	min-height: 350px;
 }
 
@@ -108,6 +115,22 @@ li{
 	height: 100%;
 }
 
+@media (max-width: 700px) {
+	.about-expand{
+		width: 100%;
+		margin: 0px auto;
+	}
+
+	.video-container {
+		width: 100%;
+		display: block;
+	}
+
+	.text {
+		margin: 0 2.5%;
+	}
+}
+
 @media (max-width: 350px) {
 	.nav-item{
 		display: block;
@@ -117,16 +140,7 @@ li{
 	li{
 		border-left: none;
 	}
-}
-
-@media (max-width: 700px) {
-	.about-expand{
-		width: 80%;
-		margin: 0px auto;
-	}
-
-	.video-container {
-		width: 80%;
-		display: block;
+	.text {
+		margin: 0 20px;
 	}
 }
