--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,10 @@ h1, li{
 	font-family: basic;
 }
 
+h2 {
+	margin-bottom: .25em;
+}
+
 a {
 	text-decoration: none;
 	color: black;
@@ -35,7 +39,6 @@ li:first-child{
 li{
 	list-style-type: none;
 	font-size: 1.5em;
-	border-left: 1px solid #555;
 	cursor: pointer;
 }
 
@@ -69,18 +72,26 @@ li{
 	text-align: center;
 }
 
+.patterns, .resources {
+	border-left: 1px solid #555;
+}
+
 .pattern-container, .resource-container {
 	clear: both;
 	display: block;
 }
 
 .patterns-expand, .resources-expand {
-	width: 50%;
+	width: 60%;
 	margin: 0 auto;
 }
 
 .level {
 	color: black;
+	font-size: .65em;
+	border-left: 1px solid black;
+	padding-left: .75em;
+	margin-left: .75em;
 }
 
 .video-container {
@@ -106,6 +117,11 @@ li{
 	left: 0;
 	width: 100%;
 	height: 100%;
+}
+
+.table {
+	width: 100%;
+	margin-top: 2em;
 }
 
 @media (max-width: 350px) {
